--- a/kubernetes-intro/web/Dockerfile
+++ b/kubernetes-intro/web/Dockerfile
@@ -1,11 +1,6 @@
-#--------------------------------------------------------
-# My Dockerfile: build Docker Image Nginx v.1
-#--------------------------------------------------------
-FROM nginx:1.20.2-alpine
-COPY ./nginx.conf /etc/nginx/conf.d/default.conf
-WORKDIR /app
-COPY ./app .
-EXPOSE 8000
-RUN chmod -R 777 /var/cache/nginx /run
-USER 1001
-
+FROM nginx:latest
+ARG UID=1001
+ENV NGINX_PORT=8000
+ENV NGINX_ROOTDIR=/app
+RUN usermod -u ${UID} nginx
+COPY default.conf.template /etc/nginx/templates/
