HW1. Discard changes

--- a/kubernetes-intro/web/Dockerfile
+++ b/kubernetes-intro/web/Dockerfile
@@ -1,6 +1,12 @@
-FROM nginx:latest
-ARG UID=1001
-ENV NGINX_PORT=8000
-ENV NGINX_ROOTDIR=/app
-RUN usermod -u ${UID} nginx
-COPY default.conf.template /etc/nginx/templates/
+#--------------------------------------------------------
+# My Dockerfile: build Docker Image Nginx v.1
+#--------------------------------------------------------
+FROM nginx:mainline-alpine
+WORKDIR /app
+COPY ./app .
+#COPY ./app /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
+EXPOSE 8000
+RUN chmod -R 777 /var/cache/nginx /run
+USER 1001
+STOPSIGNAL SIGQUIT
