Copy from sergetol for test

--- a/kubernetes-intro/web/nginx.conf
+++ b/kubernetes-intro/web/nginx.conf
@@ -1,42 +1,19 @@
-user  nginx;
-worker_processes  auto;
+server {
+    listen   8000;
 
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+    absolute_redirect off;
+    server_name_in_redirect off;
+    port_in_redirect off;
 
+    location / {
+        root /app;
+        index index.html;
+        autoindex off;
+    }
 
-events {
-    worker_connections  1024;
-}
-
-
-http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    #tcp_nopush     on;
-
-    keepalive_timeout  65;
-
-    #gzip  on;
-	#gzip  on;
-	#whoami
-
-    include /etc/nginx/conf.d/*.conf;
-
-	server {
-		server_name	localhost;
-		listen	8000;
-	        location / {
-			root   /app/;
-			autoindex on;
-			}
-		}
+    location = /health {
+        access_log off;
+        default_type application/json;
+        return 200 '{\n  "status": "Healthy",\n  "poweredBy": "Nginx $nginx_version"\n}\n';
+    }
 }
