--- a/kubernetes-intro/web/Dockerfile
+++ b/kubernetes-intro/web/Dockerfile
@@ -1,12 +1,11 @@
-#--------------------------------------------------------
-# My Dockerfile: build Docker Image Nginx v.1
-#--------------------------------------------------------
-FROM nginx:mainline-alpine
+FROM nginx:1.20.2-alpine
+
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+
 WORKDIR /app
-COPY ./app .
-#COPY ./app /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
+
 EXPOSE 8000
+
+# because of user 1001 required
 RUN chmod -R 777 /var/cache/nginx /run
 USER 1001
-STOPSIGNAL SIGQUIT
