--- a/kubernetes-intro/web/Dockerfile
+++ b/kubernetes-intro/web/Dockerfile
@@ -1,11 +1,11 @@
-FROM nginx:1.20.2-alpine
-
-COPY ./nginx.conf /etc/nginx/conf.d/default.conf
-
+FROM nginx:latest
 WORKDIR /app
-
+COPY /app/homework.html /app
+COPY nginx.conf /etc/nginx/conf.d/
+RUN touch /var/run/nginx.pid && \
+  chown -R 1001:1001 /var/run/nginx.pid && \
+  chown -R 1001:1001 /var/cache/nginx && \
+  chown -R 1001:1001 /app 
+USER 1001:1001
 EXPOSE 8000
-
-# because of user 1001 required
-RUN chmod -R 777 /var/cache/nginx /run
-USER 1001
+CMD ["nginx", "-g", "daemon off;"]
